dev/veridid-dummy-app-alb-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: veridid-dummy-app-alb-deployment
  namespace: eks-sample-app
  labels:
    app: veridid-dummy-app-alb
spec:
  selector:
    matchLabels:
      app: veridid-dummy-app-alb
  replicas: 1
  # strategy: 
  # type: RollingUpdate
  template:
    metadata:
      labels:
        app: veridid-dummy-app-alb
    spec:
      containers:
        - name: docker-build
          image: "ghcr.io/veridid/docker-build:sha-7b08649"
          imagePullPolicy: Always
