dev/veridid-dummy-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: veridid-dummy-app-deployment
  namespace: eks-sample-app
  labels:
    app: veridid-dummy-app
spec:
  selector:
    matchLabels:
      app: veridid-dummy-app
  replicas: 1
  # strategy: 
  # type: RollingUpdate
  template:
    metadata:
      labels:
        app: veridid-dummy-app
    spec:
      containers:
        - name: docker-build
          image: "ghcr.io/veridid/docker-build:sha-5f9cb6a"
          imagePullPolicy: Always
      imagePullSecrets:
        - name: ghcr-secret
