dev/veridid-dummy-app-alb-service.yml
apiVersion: v1
kind: Service          
metadata:
  name: veridid-dummy-app-alb-service
  namespace: eks-sample-app
  labels:
    veridid-dummy-app-alb
spec:
  type: ClusterIP
  selector:
    app: veridid-dummy-app-alb
  ports:
    - name: svc-port
      protocol: TCP
      port: 3001
      targetPort: 3001
