dev/veridid-dummy-app-service.yml
apiVersion: v1
kind: Service          
metadata:
  name: veridid-dummy-app-service
  namespace: eks-sample-app
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  selector:
    app: veridid-dummy-app
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
