dev/veridid-dummy-app-alb-ingress.yml
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata: 
  name: veridid-dummy-app-alb-ingress 
  namespace: eks-sample-app 
  annotations: 
    alb.ingress.kubernetes.io/load-balancer-name: veridid-dummy-app-alb-ingress 
    alb.ingress.kubernetes.io/target-type: ip 
    alb.ingress.kubernetes.io/scheme: internet-facing 
    alb.ingress.kubernetes.io/healthcheck-path: / 
spec: 
  ingressClassName: alb 
  rules: 
    - http: 
        paths: 
          - path: / 
            pathType: Prefix 
            backend: 
              service: 
                name: veridid-dummy-app-alb-service 
                port: 
                  name: svc-port 
          - path: /foo 
            pathType: Prefix 
            backend: 
              service: 
                name: veridid-dummy-app-alb-service 
                port: 
                  name: svc-port
